# data_camp_qa_gen

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  b.sh  cdx.sh  prefect.yaml  r.sh
docs/: README.md  architecture.md  (+11 more)
tmp/handoff/: AGENTS.md  CONTENTS.md  README.md  pyproject.toml
tmp/handoff/docs/: 00_project_intent.md  01_failures_and_lessons.md  02_target_pipeline_spec.md  03_testing_and_acceptance.md  04_ops_and_tooling.md  05_build_order.md  06_domain_glossary.md  07_reference_material_map.md  codex_guidance_no_reject_correct_qa.md  interrogation.md  interrogation_answers.md  latest_pipeline_run_feedback.md  remediation-direction.md
tmp/handoff/reference_input/: README.md
tmp/handoff/reference_runs/: README.md
tmp/handoff/reference_runs/first_1_percent/: all_rows.jsonl  answers.jsonl  cache_rows.jsonl  course_context_frames.jsonl  excluded_courses.jsonl  normalized_courses.jsonl  question_context_frames.jsonl  semantic_correlated_topic_questions.jsonl  semantic_correlated_topics.jsonl  semantic_review_decisions.jsonl  semantic_synthetic_answers.jsonl  semantic_topic_questions.jsonl  semantic_topics.jsonl  train_rows.jsonl
tmp/handoff/reference_tooling/: Makefile  README.md
tmp/handoff/reference_tooling/scripts/: mk_inspectgion_bundle.sh  run_all_10_percent.sh  run_all_5_percent.sh  run_all_5_percent_with_bundles.sh  run_first_1_percent.sh  start_prefect_server.sh
tmp/handoff/reference_tooling/tests/: test_aggregate_semantic_outputs.py  test_artifact_upsert.py  test_build_ledger.py  test_flow_synthetic_migration.py
(+1285 files in other folders)
